[package]
name = "reactive"
version = "0.1.0"
authors = ["cyber-meow <sjungle305@gmail.com>"]

[dependencies]
either = "1.3"

[[bin]]
name = "process42"
path = "src/bin/basic/process42.rs"

[[bin]]
name = "continuation42"
path = "src/bin/basic/continuation42.rs"

[[bin]]
name = "while_test"
path = "src/bin/basic/while_test.rs"

[[bin]]
name = "pure_signal_test"
path = "src/bin/signal/pure_signal_test.rs"

[[bin]]
name = "mpmc_signal_test"
path = "src/bin/signal/mpmc_signal_test.rs"

[[bin]]
name = "while_signal"
path = "src/bin/signal/while_signal.rs"
