[package]
name = "reactive"
version = "0.1.0"
authors = ["cyber-meow <sjungle305@gmail.com>"]

[dependencies]
either = "1.3"
crossbeam = "0.3.0"
rand = "0.3"
ordermap = "0.3.2"

[features]
debug = []

[[bin]]
name = "process42"
path = "src/single_thread/bin/basic/process42.rs"

[[bin]]
name = "continuation42"
path = "src/single_thread/bin/basic/continuation42.rs"

[[bin]]
name = "while_test"
path = "src/single_thread/bin/basic/while_test.rs"

[[bin]]
name = "pure_signal_test"
path = "src/single_thread/bin/signal/pure_signal_test.rs"

[[bin]]
name = "mpmc_signal_test"
path = "src/single_thread/bin/signal/mpmc_signal_test.rs"

[[bin]]
name = "while_signal"
path = "src/single_thread/bin/signal/while_signal.rs"

[[bin]]
name = "p_continuation42"
path = "src/parallel/bin/continuation42.rs"

[[bin]]
name = "p_process42"
path = "src/parallel/bin/process42.rs"

[[bin]]
name = "p_while_join_test"
path = "src/parallel/bin/while_join_test.rs"

[[bin]]
name = "p_pure_signal_test"
path = "src/parallel/bin/pure_signal_test.rs"
