[package]
name = "reactive"
version = "0.1.0"
authors = ["cyber-meow <sjungle305@gmail.com>"]

[dependencies]
either = "1.3"
crossbeam = "0.3.0"
rand = "0.3"
ordermap = "0.3.2"

[dev-dependencies]
piston_window = "0.74.0"
find_folder = "*"
gfx_device_gl = "0.14.6"
nalgebra = "0.13"

[features]
debug = []
abort-if-panic = []

[lib]
name = "reactive"

[[example]]
name = "sugarscape"
path = "examples/sugarscape.rs"
